[package]
name = "vsv"
version = "2.0.1"
description = "Runit service manager CLI"
edition = "2021"
repository = "https://github.com/bahamas10/rust-vsv"
license = "MIT"
exclude = ["/assets"]
keywords = ["runit", "void", "void-linux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
dirs = "6.0.0"
libc = "0.2.178"
rayon = "1.11.0"
yansi = "1.0.1"

[dev-dependencies]
assert_cmd = "2.0.4"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization.
codegen-units = 1   # Reduce parallel code generation for better optimization.
panic = "abort"     # Abort on panic (removes unwinding bloat).
strip = true        # Strip symbols from binary.
